[gd_scene load_steps=2 format=3 uid="uid://cyieg2wh0dmfd"]

[ext_resource type="Script" path="res://Scenes/ConfigScene/DeckRatioInput.gd" id="1_e10qw"]

[node name="DeckRatioInput" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e10qw")

[node name="AttackPortion" type="SpinBox" parent="."]
offset_right = 381.0
offset_bottom = 648.0
size_flags_horizontal = 3
value = 1.0

[node name="DefendPortion" type="SpinBox" parent="."]
offset_left = 385.0
offset_right = 766.0
offset_bottom = 648.0
size_flags_horizontal = 3
value = 1.0

[node name="ManeuverPortion" type="SpinBox" parent="."]
offset_left = 770.0
offset_right = 1152.0
offset_bottom = 648.0
size_flags_horizontal = 3
value = 1.0

[connection signal="value_changed" from="AttackPortion" to="." method="_on_attack_portion_value_changed"]
[connection signal="value_changed" from="DefendPortion" to="." method="_on_defend_portion_value_changed"]
[connection signal="value_changed" from="ManeuverPortion" to="." method="_on_maneuver_portion_value_changed"]
